<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSReminder</string>
    <string name="intro">The GPS Reminder runs in the background and tells you if GPS is activated.</string>
    <string name="gps_active">GPS is active</string>
    <string name="gps_inactive">GPS is inactive</string>
    <string name="remind_me">Remind me!</string>
    <string name="settings">Settings</string>
    <string name="time_period_to_remind_me">Time-period to remind me!</string>
    <string name="auto_start">Auto-start</string>
    <string name="start_gps_reminder_automatically_after_starting_the_device">Start GPS-Reminder automatically after starting the device</string>
    <string name="keep_running">Keep running</string>
    <string name="keep_service_running">keep Service running</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="don_t_tell_me">Don\'t tell me!</string>

    <string name="gps_is_active">GPS is ACTIVE</string>
    <string name="gps_isnot_active">GPS is NOT ACTIVE</string>
    <string name="service_started">GPS Reminder service started!</string>

</resources>
