<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="at.nasca.gpsreminder.ReminderActivity" >

    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/nasca_bg_orange" >
        <TextView
            android:id="@+id/txvNasca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.93"
            android:gravity="center_horizontal"
            android:paddingLeft="-66dp"
            android:paddingTop="20dp"
            android:text="GPS Reminder"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />
    </LinearLayout>
    -->
    <!-- Header -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/intro" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btnstyle"
                android:onClick="startService"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/remind_me"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:background="@drawable/btnstyle"
                android:onClick="stopService"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:text="@string/don_t_tell_me"
                android:textColor="@android:color/white" >
            </Button>
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/settings"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
                <!--
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Notification" />
                <CheckBox
                    android:id="@+id/checkBoxNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="show notification" />
                -->

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/time_period_to_remind_me" />

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/auto_start" />

                <CheckBox
                    android:id="@+id/checkBoxAuto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_gps_reminder_automatically_after_starting_the_device" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/keep_running" />

                <CheckBox
                    android:id="@+id/checkBoxRunning1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/keep_service_running" />

                <Button
                    android:id="@+id/opengpssettings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btnstyle"
                    android:onClick="openGpsSettings"
                    android:text="@string/gps_settings"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>